[package]
name = "tuile"
version = "0.1.0"
authors = ["Simon Willshire"]

[dependencies]
rustix = { version = "0.38", default-features = false, features = ["stdio", "time", "thread", "fs", "mm", "rand"] }
# allocator
mimalloc = { version = "0.1", default-features = false }
# frontend
tree-sitter = { version = "0.24", default-features = false }
mlir-sys = { path = "./mlir-sys" }
log = { version = "0.4", default-features = false, features = ["max_level_trace", "release_max_level_warn"]}

[profile.release]
lto = true
panic = "abort"
strip = true
